overflow fixed

--- a/pamparam/src/styles/Messenger.css
+++ b/pamparam/src/styles/Messenger.css
@@ -310,7 +310,7 @@
 .modalMessage__body__search__results{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 97px);
     overflow-x: hidden;
     overflow-y: scroll;
     flex: 1 1 auto;
@@ -318,6 +318,13 @@
     min-width: 0;
     align-items: stretch;
     flex-direction: column;
+}
+
+.modalMessage__mapContainer {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 @media screen and (max-width: 935px) {
